--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nuestros Robots</title>
-    <meta name="description" content="Ассистент психолога - управление расписанием и консультациями" />
-    <meta name="author" content="Nuestros Robots" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <title>liftme.by</title>
+    <meta name="description" content="Панель управления - управление расписанием и консультациями" />
+    <meta name="author" content="НАШИ БОТЫ" />
 
-    <meta property="og:title" content="Nuestros Robots" />
-    <meta property="og:description" content="Ассистент психолога - управление расписанием и консультациями" />
+    <meta property="og:title" content="liftme.by" />
+    <meta property="og:description" content="Панель управления - управление расписанием и консультациями" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:image" content="/favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Nuestros Robots" />
-    <meta name="twitter:description" content="Ассистент психолога - управление расписанием и консультациями" />
-    <meta name="twitter:image" content="/favicon.ico" />
+    <meta name="twitter:title" content="liftme.by" />
+    <meta name="twitter:description" content="Панель управления - управление расписанием и консультациями" />
+    <meta name="twitter:image" content="/favicon.png" />
   </head>
 
   <body>
