--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>liftme.by</title>
+    <title>nuestros robots</title>
     <meta name="description" content="Панель управления - управление расписанием и консультациями" />
     <meta name="author" content="НАШИ БОТЫ" />
 
-    <meta property="og:title" content="liftme.by" />
+    <meta property="og:title" content="nuestros robots" />
     <meta property="og:description" content="Панель управления - управление расписанием и консультациями" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="liftme.by" />
+    <meta name="twitter:title" content="nuestros robots" />
     <meta name="twitter:description" content="Панель управления - управление расписанием и консультациями" />
     <meta name="twitter:image" content="/favicon.png" />
   </head>
